potential fix for padding problem on mobile

--- a/css/main.css
+++ b/css/main.css
@@ -34,6 +34,6 @@ li a {
 
 /*Buffer between menu bar and content*/
 .buffer {
-    margin-top: 50px;
+    margin-top: 5%;
     color: black;
 }
